--- a/projekti_stiil.css
+++ b/projekti_stiil.css
@@ -14,8 +14,8 @@ body {
 h1 {
   padding-left: 20px;
   font-size:50px;
-
 }
+
 h2 {
   font-size:35px;
   font-weight: bold;
@@ -125,5 +125,10 @@ Pärast iga tekstirea kirjutamist eemaldab eemaldab float'id */
 
 .tühi_ruum {
   height:200px
+}
 
+iframe { /* Eemaldab videolt valge borderi ja hoiab videot kindla suurusega, */
+  border: 0; /* et akna suuruse muutudes ei liiguks video teksti kohale */
+  height: 30vh;
+  width: 25vw;
 }
