--- a/rasmus.css
+++ b/rasmus.css
@@ -1,7 +1,10 @@
-/*Siin on asjad, mis mõjutavad kogu body üksust*/
+/*Neptuuni pildi allikas: https://solarsystem.nasa.gov/planets/neptune/overview/*/
+/*Tähtede pildi allikas: https://pixabay.com/illustrations/stars-night-dark-sky-space-3750824/ */
+
 body {
 background-image: url(images/neptuun_pealeht.png), url(images/tähed.png); /*neptuuni pilt ja tähed*/
-background-repeat: no-repeat, no-repeat; /*et pilt ei korduks*/
+background-repeat: no-repeat, repeat; /*et pilt ei korduks*/
+background-size: 60vw,100%;
 
 /* Piltide asukohad*/
 background-position-x: 25%, 0%; 
