--- a/pealehe_stiil.css
+++ b/pealehe_stiil.css
@@ -1,13 +1,15 @@
-/*Siin on asjad, mis mõjutavad kogu body üksust*/
+/* Impordib google api'st 'Ubuntu' fondi */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
+  
 body {
   color:white; /*kogu body tekst valge */
   background-color: black;
   overflow: hidden;
-  }
+}
 
 #pealkiri {
   font-size: xx-large;
-  font-family: "Raleway";
+  font-family: "Ubuntu", sans-serif;
   position: absolute;
   top: 15%;
   left: 0;
@@ -31,4 +33,14 @@ body {
   position: absolute;
   top: 30%;
   right: 0%;
+}
+
+/*Pildid paisuvad kursoriga peale minnes*/
+.pilt {
+  height: 45vh;
+  transition: transform .2s;
+}
+
+.pilt:hover { 
+  transform: scale(1.2);
 }
